# vicuna2_core

./: .gitignore  CMakeLists.txt  README.md  config.mk  verilator_support.cpp  verilator_support.h
rtl/: vproc_core.sv  vproc_decoder.sv  vproc_div.sv  vproc_div_shift_clz.sv  vproc_elem.sv  vproc_fpu.sv  vproc_lsu.sv  vproc_mul.sv  vproc_mul_block.sv  vproc_pending_wr.sv  vproc_pipeline.sv  vproc_pipeline_wrapper.sv  vproc_pkg.sv  vproc_result.sv  vproc_unit_mux.sv  vproc_unit_wrapper.sv  vproc_vreg_wr_mux.sv  vproc_vregpack.sv  vproc_vregunpack.sv  vproc_zvbb.sv  vproc_zvbc.sv
